Fixed up text align on register button confirm password

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -87,6 +87,7 @@ label[for=password]{
 }
 label[for=confirmpassword]{
     grid-area: confirm-password-label;
+    margin-top: 17px;
 }
 
 label[for=username], label[for=password], label[for=confirmpassword]{
